# itay-logs-reviewer

./: README.md  pyproject.toml
logs_reviewer/: __init__.py  analyzer.py  app.py  cli.py  coralogix.py  reader.py  sso.py
logs_reviewer/tests/: test_analyzer.py  test_app.py  test_cli.py  test_coralogix.py  test_sso.py
tests/: test_analyzer.py
